--- a/dockerExplain.html
+++ b/dockerExplain.html
@@ -10,25 +10,13 @@
 </head>
 <body>
     
-    <nav>
+    <nav id="nav" v-cloak>
 
         <ul class="nav_menu">
             <span id="menuTarget"></span>
-            <a href="index.html">
-                <img src="./images/logo.webp" alt="logo">
-            </a>
-            <li class="menu1"><a href="./htmlExplain.html">HTML</a></li>
-            <li class="menu2"><a href="./cssExplain.html">CSS</a></li>
-            <li class="menu3"><a href="./jsExplain.html">JavaScript</a></li>
-            <li class="menu4"><a href="./vueExplain.html">Vue</a></li>
-            <li class="menu5"><a href="javascript:;">前端更多技術<img src="images/chevron-down.svg" alt="更多資訊"></a>
+            <li v-for="item in navList" :class="item.class"><a :href="item.href" v-html="item.name"></a>
                 <ul>
-                    <li><a href="./gitExplain.html">Git</a></li>
-                    <li><a href="./regexExplain.html">Regex</a></li>
-                    <li><a href="./svgExplain.html">Svg</a></li>
-                    <li><a href="./jqueryExplain.html">jQuery</a></li>
-                    <li><a href="./dockerExplain.html">Docker</a></li>
-                    <li><a href="./cicdExplain.html">CI/CD</a></li>
+                    <li v-for="liList in item.ul"><a :href="liList.href">{{liList.name}}</a></li>
                 </ul>
             </li>
         </ul>
@@ -45,25 +33,19 @@
         </div>
 
         <ul class="mob_menu">
-            <li class="menu1"><a href="./index.html">首頁</a></li>
-            <li class="menu1"><a href="./htmlExplain.html">HTML</a></li>
-            <li class="menu2"><a href="./cssExplain.html">CSS</a></li>
-            <li class="menu3"><a href="./jsExplain.html">JavaScript</a></li>
-            <li class="menu4"><a href="./vueExplain.html">Vue</a></li>
-            <li class="menu5"><a href="javascript:;">前端更多技術</a></li>
-            <ul class="menu5_more">
-                <li><a href="./gitExplain.html">Git</a></li>
-                <li><a href="./regexExplain.html">Regex</a></li>
-                <li><a href="./svgExplain.html">Svg</a></li>
-                <li><a href="./jqueryExplain.html">jQuery</a></li>
-                <li><a href="./dockerExplain.html">Docker</a></li>
-                <li><a href="./cicdExplain.html">CI/CD</a></li>
-            </ul>
+            <li v-for="item in mobNavList" :class="item.class"><a :href="item.href" v-html="item.name"></a>
+            </li>
+            <div>
+                <ul class="menu5_more">
+                    <li v-for="item in mobNavList[5].ul"><a :href="item.href">{{item.name}}</a></li>
+                </ul>
+            </div>
         </ul>
     </nav>
 
+
     <div class="breadcrumbs">當前位置: <a href="index.html">首頁</a> <a href="javascript:;">前端更多技術</a> <a href="./dockerExplain.html">Docker</a></div>
-    <article class="banner" id="banner">
+    <article class="banner" id="banner" v-cloak>
         <div class="banner_left" @click.stop="imgSwitch(keyN-1)">
             <img src="./images/chevron-left.svg">
         </div>
@@ -85,13 +67,13 @@
 
             <div class="code">
                 <h3>Docker是什麼?</h3>
-                <p>Docker是一種讓使用者透過容器的方式將應用程式在內執行，與虛擬機相似但是執行所需的資源可以相差數十倍，Docker的資源使用率更高也更好管理，使用Docker前須先熟悉Linux常見指令。</p>
+                <p>Docker是透過容器建立一個乾淨測試環境，與虛擬機相似但是執行所需的資源可以相差數十倍，Docker的資源使用率更高也更好管理，使用Docker前須先熟悉Linux常見指令。</p>
                 <h3>容器</h3>
-                <p>容器(container)是Docker將應用程式包裝起來的環境，容器可以透過映像檔產生，在容器內執行一切操作皆不會影響本機環境，容器使用完畢後可以直接刪除實施用完即棄的概念</p>
+                <p>容器(container)是Docker將應用程式包裝起來的環境，容器由映像檔產生，在容器內執行一切操作皆不會影響本機環境，容器使用完畢後可以直接刪除實施用完即棄的概念</p>
                 <h3>映像檔</h3>
                 <p>映像檔(images)是Docker建立容器必備的檔案，一個映像檔內會含有執行所需要的工具如後端會含有node.js，映像檔實作可以參考<a href="https://ithelp.ithome.com.tw/articles/10205977?sc=pt" target="new">製作自己的映像檔</a>，一般而言前端並不會自製映像檔，這個映像檔可能是來自後端或倉庫拉下使用。</p>
                 <h3>倉庫</h3>
-                <p>用來存放映像檔的位置，包含私有與公開，與Git倉庫類似概念。</p>
+                <p>用來存放映像檔的位置，包含私有與公開，與Git倉庫類似概念，可以pull他人的映像檔或自行製作上傳保存。</p>
 
                 <p>更詳細的Docker可以參考<a href="https://www.youtube.com/watch?v=CxNm-3EedyA" target="new">Docker開發環境建置</a>、<a href="https://ithelp.ithome.com.tw/users/20102562/ironman/3746" target="new">Docker從安裝到進階應用</a>。</p>
             </div>
@@ -127,8 +109,14 @@
     </footer>
 
 
+    <script src="./js/vue_2.6.14.js"></script>
+    <script type="module">
+        import './js/navVue.js'
+        import './js/bannerVue.js'
+        import './js/layout.js'
+        import './js/contentAni.js'
+    </script>
 
-<script src="./js/vue_2.6.14.js"></script>
-<script src="./js/layout.js"></script>
+
 </body>
 </html>
