--- a/seoExplain.html
+++ b/seoExplain.html
@@ -10,26 +10,13 @@
 </head>
 <body>
     
-    <nav>
+    <nav id="nav" v-cloak>
 
         <ul class="nav_menu">
             <span id="menuTarget"></span>
-            <a href="index.html">
-                <img src="./images/logo.webp" alt="logo">
-            </a>
-            <li class="menu1"><a href="./htmlExplain.html">HTML</a></li>
-            <li class="menu2"><a href="./cssExplain.html">CSS</a></li>
-            <li class="menu3"><a href="./jsExplain.html">JavaScript</a></li>
-            <li class="menu4"><a href="./vueExplain.html">Vue</a></li>
-            <li class="menu5"><a href="javascript:;">前端更多技術<img src="images/chevron-down.svg" alt="更多資訊"></a>
-                <ul>
-                    <li><a href="./gitExplain.html">Git</a></li>
-                    <li><a href="./regexExplain.html">Regex</a></li>
-                    <li><a href="./svgExplain.html">Svg</a></li>
-                    <li><a href="./seoExplain.html">Seo</a></li>
-                    <li><a href="./jqueryExplain.html">jQuery</a></li>
-                    <li><a href="./dockerExplain.html">Docker</a></li>
-                    <li><a href="./cicdExplain.html">CI/CD</a></li>
+            <li v-for="item in navList" :class="item.class"><a :href="item.href" v-html="item.name"></a>
+                <ul class="menu5">
+                    <li v-for="liList in item.ul"><a :href="liList.href">{{liList.name}}</a></li>
                 </ul>
             </li>
         </ul>
@@ -46,26 +33,18 @@
         </div>
 
         <ul class="mob_menu">
-            <li class="menu1"><a href="./index.html">首頁</a></li>
-            <li class="menu1"><a href="./htmlExplain.html">HTML</a></li>
-            <li class="menu2"><a href="./cssExplain.html">CSS</a></li>
-            <li class="menu3"><a href="./jsExplain.html">JavaScript</a></li>
-            <li class="menu4"><a href="./vueExplain.html">Vue</a></li>
-            <li class="menu5"><a href="javascript:;">前端更多技術</a></li>
-            <ul class="menu5_more">
-                <li><a href="./gitExplain.html">Git</a></li>
-                <li><a href="./regexExplain.html">Regex</a></li>
-                <li><a href="./svgExplain.html">Svg</a></li>
-                <li><a href="./seoExplain.html">Seo</a></li>
-                <li><a href="./jqueryExplain.html">jQuery</a></li>
-                <li><a href="./dockerExplain.html">Docker</a></li>
-                <li><a href="./cicdExplain.html">CI/CD</a></li>
-            </ul>
+            <li v-for="item in mobNavList" :class="item.class"><a :href="item.href" v-html="item.name"></a>
+            </li>
+            <div>
+                <ul class="menu5_more">
+                    <li v-for="item in mobNavList[5].ul"><a :href="item.href">{{item.name}}</a></li>
+                </ul>
+            </div>
         </ul>
     </nav>
 
     <div class="breadcrumbs">當前位置: <a href="index.html">首頁</a> <a href="javascript:;">前端更多技術</a> <a href="./seoExplain.html">SEO</a></div>
-    <article class="banner" id="banner">
+    <article class="banner" id="banner" v-cloak>
         <div class="banner_left" @click.stop="imgSwitch(keyN-1)">
             <img src="./images/chevron-left.svg">
         </div>
@@ -115,8 +94,12 @@
     </footer>
 
 
+    <script src="./js/vue_2.6.14.js"></script>
+    <script type="module">
+        import './js/navVue.js'
+        import './js/bannerVue.js'
+        import './js/layout.js'
+    </script>
 
-<script src="./js/vue_2.6.14.js"></script>
-<script src="./js/layout.js"></script>
 </body>
 </html>
