--- a/vueExplain.html
+++ b/vueExplain.html
@@ -10,25 +10,13 @@
 </head>
 <body>
     
-    <nav>
+    <nav id="nav" v-cloak>
 
         <ul class="nav_menu">
             <span id="menuTarget"></span>
-            <a href="index.html">
-                <img src="./images/logo.webp" alt="logo">
-            </a>
-            <li class="menu1"><a href="./htmlExplain.html">HTML</a></li>
-            <li class="menu2"><a href="./cssExplain.html">CSS</a></li>
-            <li class="menu3"><a href="./jsExplain.html">JavaScript</a></li>
-            <li class="menu4"><a href="./vueExplain.html">Vue</a></li>
-            <li class="menu5"><a href="javascript:;">前端更多技術<img src="images/chevron-down.svg" alt="更多資訊"></a>
+            <li v-for="item in navList" :class="item.class"><a :href="item.href" v-html="item.name"></a>
                 <ul>
-                    <li><a href="./gitExplain.html">Git</a></li>
-                    <li><a href="./regexExplain.html">Regex</a></li>
-                    <li><a href="./svgExplain.html">Svg</a></li>
-                    <li><a href="./jqueryExplain.html">jQuery</a></li>
-                    <li><a href="./dockerExplain.html">Docker</a></li>
-                    <li><a href="./cicdExplain.html">CI/CD</a></li>
+                    <li v-for="liList in item.ul"><a :href="liList.href">{{liList.name}}</a></li>
                 </ul>
             </li>
         </ul>
@@ -45,25 +33,18 @@
         </div>
 
         <ul class="mob_menu">
-            <li class="menu1"><a href="./index.html">首頁</a></li>
-            <li class="menu1"><a href="./htmlExplain.html">HTML</a></li>
-            <li class="menu2"><a href="./cssExplain.html">CSS</a></li>
-            <li class="menu3"><a href="./jsExplain.html">JavaScript</a></li>
-            <li class="menu4"><a href="./vueExplain.html">Vue</a></li>
-            <li class="menu5"><a href="javascript:;">前端更多技術</a></li>
-            <ul class="menu5_more">
-                <li><a href="./gitExplain.html">Git</a></li>
-                <li><a href="./regexExplain.html">Regex</a></li>
-                <li><a href="./svgExplain.html">Svg</a></li>
-                <li><a href="./jqueryExplain.html">jQuery</a></li>
-                <li><a href="./dockerExplain.html">Docker</a></li>
-                <li><a href="./cicdExplain.html">CI/CD</a></li>
-            </ul>
+            <li v-for="item in mobNavList" :class="item.class"><a :href="item.href" v-html="item.name"></a>
+            </li>
+            <div>
+                <ul class="menu5_more">
+                    <li v-for="item in mobNavList[5].ul"><a :href="item.href">{{item.name}}</a></li>
+                </ul>
+            </div>
         </ul>
     </nav>
 
     <div class="breadcrumbs">當前位置: <a href="./index.html">首頁</a><a href="./vueExplain.html">Vue</a></div>
-    <article class="banner" id="banner">
+    <article class="banner" id="banner" v-cloak>
         <div class="banner_left" @click.stop="imgSwitch(keyN-1)">
             <img src="./images/chevron-left.svg">
         </div>
@@ -81,14 +62,14 @@
             <header class="header">
                 <h2>前言</h2>
                 <p>框架是什麼?為什麼要用它?</p>
-                <p>在大型資料網站中直接使用HTML、JS顯示畫面及控制功能等時會因為龐大的分支頁導致維護困難及成本直線上升，如有一萬個頁面時改動其中一個共通佈局點時有可能要將這一萬個頁面的資料做更改，這是一個非常耗時間及做無意義事的成本，因此使用JavaScript框架可以有效解決這些問題。</p>
+                <p>在大型資料網站中直接使用HTML、JS顯示畫面及控制功能等時會因為龐大的分支頁導致維護困難及成本直線上升，假如有一萬個頁面需要更改其中一個共通佈局點時有可能要將這一萬個頁面的資料一個一個更改，這是一個非常耗時間及做無意義事的成本，因此使用JavaScript框架可以有效解決這些問題。</p>
                 <P>目前JavaScript三個主流框架分別為Angular、React、Vue，本篇只針對Vue進行介紹，由於Vue有學習曲線低、輕量型等優點只要對HTML、CSS、JS有基礎認知幾乎都能在短時間內對Vue上手，相較於其他兩個框架Vue的入門門檻非常的低。</P>
             </header>
 
             <div class="code">
                 <h3>框架的優勢</h3>
-                <p>目前三大框架的運作原理都是由資料驅動畫面，開發人員只要透過修改資料就可以讓框架自動將畫面做變更，聽起來很神奇對吧?在這之前需要了解MVC以及MVVM架構。</p>
-                <p>MVC，M全名Model指資料處理、處理邏輯的部分，V全名View指管理畫面顯示的部分，C全名Controller指負責處理使用者與系統端的互動應用。</p>
+                <p>目前三大框架的運作原理都是由資料驅動畫面，開發人員只要透過修改資料就可以讓框架自動將畫面做變更，聽起來很神奇對吧?開始使用框架前需要了解MVC以及MVVM架構。</p>
+                <p>MVC，M全名Model指資料處理、處理邏輯的部分。<br>V全名View指管理畫面顯示的部分。<br>C全名Controller指負責處理使用者與系統端的互動應用。<br></p>
                 <p>MVVM，這邊與MVC相比只有VM不同，VM全名ViewModel是負責資料與畫面綁定做呈現的部分，根據<a href="https://vuejs.org/v2/guide/instance.html" target="new">官方文件</a>說明Vue不完全是一個MVVM架構，但Vue的部分設計是受到它的啟發。</p>
                 <h3>使用框架前我要準備什麼?</h3>
                 <p>進入框架前請先確保已經對HTML、CSS、JS有基本了解，在Vue內需避免直接針對DOM的行為應該讓框架進行負責也符合框架設計的初衷。</p>
@@ -226,7 +207,7 @@
 
         <article class="end_text">
             <h2>小結</h2>
-            <p>沒有最好的工具，只有應用在最好時機的工具，如果你的頁面不多且資料占比低的情況下選擇框架未必是件好事。</p>
+            <p>沒有最好的工具，只有應用在最好時機的工具，如果你的頁面不多且資料占比低的情況下選擇框架未必是件好事，使用框架時建議將<a href="https://vuejs.org/v2/guide/" target="new">官方文件</a>讀一遍，了解使用方式再進行開發。</p>
             <p>透過框架或許可以做到很多事情，但絕對不能忘記框架都是建立在JavaScript基礎上，框架只是簡化開發人員與JS之間溝通的距離而不是代替。</p>
             <p>關於更多Vue學習有<a href="https://cli.vuejs.org/" target="new" >Vue CLI專案開發</a>、<a href="https://vuex.vuejs.org/guide/" target="new" >Vuex管理資料</a>、<a href="https://router.vuejs.org/" target="new" >Vue Router設定路由</a>。</p>
             <p>針對更多Vue影片可以參考<a href="https://www.youtube.com/channel/UCEL8871qFEakpqYpwBSjHNA" target="new">Alex 宅幹嘛頻道</a>，建議由重頭說起與Vue.js手牽手系列開始觀看。</p>
@@ -261,7 +242,12 @@
 
 
     <script src="./js/vue_2.6.14.js"></script>
-    <script src="./js/layout.js"></script>
+    <script type="module">
+        import './js/navVue.js'
+        import './js/bannerVue.js'
+        import './js/layout.js'
+    </script>
+    
     <script>
         new Vue({
             el:'#app',
